# networking

./: CMakeLists.txt  README.md
include/networking/: IfAddrs.hpp  Init.hpp  ListIter.hpp  NetworkAdapterInfo.hpp  Socket.hpp  SocketDefaultPolicy.hpp  SocketPosixPolicy.hpp  SocketWindowsPolicy.hpp
src/: CMakeLists.txt  IfAddrs.hpp  InitOthers.cpp  InitWindow.cpp  ListIter.hpp  NetworkAdapterInfo.cpp  SocketPosixPolicy.cpp  SocketWindowsPolicy.cpp  main.cpp
test/: CMakeLists.txt  test_ListIter_constexpr.cpp
